[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chain-debug-lite"
version = "0.1.0"
description = "Local-first chain debugger for LLM pipelines"
authors = [{ name="Your Name", email="you@example.com" }]
readme = "README.md"
license = { text = "MIT" }
dependencies = [
  "streamlit",
  "fastapi",
  "pytest",
]
